# ogl_sandbox

./: .gitignore  CMakeLists.txt  Dockerfile  docker_run.sh
assets/: run.sh
assets/test_data/: extern_param_single.csv  proj_matrix_portrait.csv  windows.csv
old/: hello-pbo.cpp  hello_building.cpp  sandbox_cam_search.cpp  tile.cpp
sandbox/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  hello-no-fbo.cpp  hello-pbo.cpp  hello.cpp  hello_egl.cpp  hello_headless.cpp  postprocess.cpp  postprocess.cu  sturg_cuda_post_proc.cu  sturg_cuda_post_proc.hpp  sturg_cuda_post_proc_edge_kernels.cu  sturg_cuda_post_proc_kernels.cu  sturg_cv_post_proc.hpp
src/: SimpleVertexShader.vertexshader  hello.cpp  hello_building.cpp  hello_mouse.cpp  render.cpp
sturglib/: helper_math.h  point_in_triangle.cpp  point_in_triangle.hpp  rc_loader.cu  rc_loader.hpp  rc_struct.h  sturg_colors.cpp  sturg_colors.h  sturg_helper_func.cpp  sturg_helper_func.hpp  sturg_loader.cpp  sturg_loader.hpp  sturg_search_params.cpp  sturg_search_params.hpp  sturg_struct.h  sturg_yaw.cpp  sturg_yaw.h
